UnitTest - simplifying getBindings a wee bit